Add bean-like attribute accessors to generated entities

--- a/src/main/java/com/appspot/relaxe/source/INTERFACE.in
+++ b/src/main/java/com/appspot/relaxe/source/INTERFACE.in
@@ -367,6 +367,8 @@ public interface {{table-interface}}
 				}
 			}
 		}
+		
+	{{entity-attribute-accessor-signature-list}}
 
 	interface Content extends com.appspot.relaxe.ent.Content {  
   		{{value-accessor-list}}
