--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,15 @@
 	<classpathentry kind="src" path="impl/mysql/sakila/src/main"/>
 	<classpathentry kind="src" path="impl/pg/common"/>
 	<classpathentry kind="src" path="impl/pg/pagila/src/main"/>
+	<classpathentry kind="src" path="build/impl/pg/pagila/src/gen"/>
+	<classpathentry kind="src" path="impl/pg/pagila/src/test"/>
+	<classpathentry kind="src" path="impl/mysql/sakila/src/test"/>
+	<classpathentry kind="src" path="build/impl/mysql/sakila/src/gen"/>
+	<classpathentry kind="src" path="build/impl/hsqldb/pagila/src/gen"/>
+	<classpathentry kind="src" path="build/impl/mariadb/sakila/src/gen"/>
+	<classpathentry excluding="gen/" kind="src" path="build/impl/hsqldb/pagila/src"/>
+	<classpathentry kind="src" path="impl/hsqldb/pagila/src/main"/>
+	<classpathentry kind="src" path="impl/mariadb/sakila/src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache CSV"/>
