--- a/src/main/java/com/appspot/relaxe/source/FOREIGN_KEY_IMPLEMENTATION.in
+++ b/src/main/java/com/appspot/relaxe/source/FOREIGN_KEY_IMPLEMENTATION.in
@@ -10,7 +10,7 @@
 		private {{table-interface}}ForeignKeyMap() {		
 		}
 		
-		private {{table-interface}}ForeignKeyMap(com.appspot.relaxe.meta.Environment environment, java.util.Map<com.appspot.relaxe.expr.Identifier, ForeignKey> content) {
+		private {{table-interface}}ForeignKeyMap(com.appspot.relaxe.env.Environment environment, java.util.Map<com.appspot.relaxe.expr.Identifier, ForeignKey> content) {
 			super(environment, content);
 		}
 	}
