--- a/src/main/java/com/appspot/relaxe/source/LITERAL_CATALOG.in
+++ b/src/main/java/com/appspot/relaxe/source/LITERAL_CATALOG.in
@@ -15,8 +15,8 @@ import com.appspot.relaxe.meta.BaseTable;
 import com.appspot.relaxe.meta.Catalog;
 import com.appspot.relaxe.meta.Constraint;
 // import com.appspot.relaxe.meta.DataType;
-import com.appspot.relaxe.meta.Environment;
-import com.appspot.relaxe.meta.SerializableEnvironment;
+import com.appspot.relaxe.env.Environment;
+import com.appspot.relaxe.env.SerializableEnvironment;
 import com.appspot.relaxe.meta.ForeignKey;
 import com.appspot.relaxe.meta.PrimaryKey;
 import com.appspot.relaxe.meta.Column;
